# transfolk-backend

./: .gitignore  README.md  pyproject.toml  run.py
db_admin/: README.txt  config.py  db_manager.py  entity_page.py  form_panel.py  main.py  main_window.py  table_panel.py
models/released/: john001_todos_momet_x_x.json  kurt001_todos_baseline_x_x.json  kurt001_todos_momet_x_x.json  kurt001_todos_patterns_x_x.json  kurt002_todos_momet_x_x.json  kurt003_todos_momet_x_x.json  mick001_todos_momet_x_x.json  mick003_todos_momet_x_x.json  mick006_todos_momet_x_x.json  mick010_todos_momet_x_x.json  vocab_todos_baseline_x_x.json  vocab_todos_momet_x_x.json  vocab_todos_patterns_x_x.json
scripts/: run_abc_to_xml.py  run_charts.py  run_classifier_paper.py  run_generate.py  run_metrics.py  run_midi_to_xml.py  run_preprocess.py  run_sty_classifier.py  run_sty_curves.py  run_tokenize.py  run_train.py
src/transfolk_backend/: app.py  config.py  main.py
src/transfolk_backend/routes/: generate.py  models.py
src/transfolk_backend/services/: model_registry.py  pipeline_cache.py
