[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "transfolk-backend"
version = "0.1.0"
description = "FastAPI backend for TransFolk symbolic folk melody generation."
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = { file = "LICENSE" }

authors = [
    { name = "Brian Martínez-Rodríguez" }
]

dependencies = [
    "fastapi>=0.110,<1.0",
    "uvicorn[standard]>=0.27,<1.0",
    "python-multipart>=0.0.9",
    "pydantic>=2.6,<3.0",
    "pyyaml>=6.0.1"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "black"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
include-package-data = true