[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "transfolk-backend"
version = "0.1.0"
description = "FastAPI backend for TransFolk symbolic folk melody generation."
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = { file = "LICENSE" }

authors = [
    { name = "Brian Martínez-Rodríguez" }
]

dependencies = [
    "fastapi>=0.110,<1.0",
    "uvicorn[standard]>=0.27,<1.0",
    "python-multipart>=0.0.9",
    "pydantic>=2.6,<3.0",
    "pyyaml>=6.0.1"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "black>=24.0",
    "scikit-learn>=1.4.2",
    "pandas>=2.2"
]

[tool.setuptools]
include-package-data = true
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]